force-app/main/default/objects/School__c/fields/Account_Person_Email__c.field-meta.xml
<CustomField>
    <fullName>Account_Person_Email__c</fullName>
    <label>Account Person Email</label>
    <type>Email</type>
</CustomField>