force-app/main/default/objects/School__c/fields/Account_Person_Phone__c.field-meta.xml
<CustomField>
    <fullName>Account_Person_Phone__c</fullName>
    <label>Account Person Phone</label>
    <type>Phone</type>
</CustomField>