force-app/main/default/objects/School__c/fields/Board_Affiliation__c.field-meta.xml
<CustomField>
    <fullName>Board_Affiliation__c</fullName>
    <label>Board Affiliation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CBSE</fullName>
            </value>
            <value>
                <fullName>ICSE</fullName>
            </value>
            <value>
                <fullName>IB</fullName>
            </value>
            <value>
                <fullName>IGCSE</fullName>
            </value>
            <value>
                <fullName>State Board</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>