force-app/main/default/objects/School__c/fields/Delivery_Medium__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Medium__c</fullName>
    <label>Delivery Medium</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>English</fullName>
            </value>
            <value>
                <fullName>Hindi</fullName>
            </value>
            <value>
                <fullName>Local</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>