force-app/main/default/objects/School__c/fields/Faculty_Strength__c.field-meta.xml
<CustomField>
    <fullName>Faculty_Strength__c</fullName>
    <defaultValue>75</defaultValue>
    <label>Faculty Strength</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>