force-app/main/default/objects/School__c/fields/Fee_Range__c.field-meta.xml
<CustomField>
    <fullName>Fee_Range__c</fullName>
    <label>Fee Range</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>&lt; 30K</fullName>
            </value>
            <value>
                <fullName>30K to 50K</fullName>
            </value>
            <value>
                <fullName>50K to 70K</fullName>
            </value>
            <value>
                <fullName>70k to 1Lac</fullName>
            </value>
            <value>
                <fullName>1 Lac to 2 Lac</fullName>
            </value>
            <value>
                <fullName>&gt; 2 Lac</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>