force-app/main/default/objects/School__c/fields/Founding_Year__c.field-meta.xml
<CustomField>
    <fullName>Founding_Year__c</fullName>
    <label>Founding Year</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>