force-app/main/default/objects/School__c/fields/Grade_Range__c.field-meta.xml
<CustomField>
    <fullName>Grade_Range__c</fullName>
    <label>Grade Range</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pre Nursery</fullName>
            </value>
            <value>
                <fullName>Nursery</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>6</fullName>
            </value>
            <value>
                <fullName>7</fullName>
            </value>
            <value>
                <fullName>8</fullName>
            </value>
            <value>
                <fullName>9</fullName>
            </value>
            <value>
                <fullName>10</fullName>
            </value>
            <value>
                <fullName>11</fullName>
            </value>
            <value>
                <fullName>12</fullName>
            </value>
            <value>
                <fullName>Upto 10</fullName>
            </value>
            <value>
                <fullName>Upto 12</fullName>
            </value>
            <value>
                <fullName>Upto Graduation</fullName>
            </value>
            <value>
                <fullName>Upto PG</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>