force-app/main/default/objects/School__c/fields/ImageURL__c.field-meta.xml
<CustomField>
    <fullName>ImageURL__c</fullName>
    <formula>IF(  ISPICKVAL(School_Type__c , &quot;Premium&quot;),&quot;https://sales-production--fsldemo--c.sandbox.vf.force.com/resource/1687079100000/SchoolPremium&quot;,&quot;https://sales-production--fsldemo--c.sandbox.vf.force.com/resource/1687251607000/SchoolLimited&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ImageURL</label>
    <type>Text</type>
</CustomField>