force-app/main/default/objects/School__c/fields/No_of_converted_leads__c.field-meta.xml
<CustomField>
    <fullName>No_of_converted_leads__c</fullName>
    <label>No of converted leads</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>