force-app/main/default/objects/School__c/fields/No_of_Onboarded_Schools__c.field-meta.xml
<CustomField>
    <fullName>No_of_Onboarded_Schools__c</fullName>
    <label>No of Onboarded Schools</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>