force-app/main/default/objects/School__c/fields/Playground__c.field-meta.xml
<CustomField>
    <fullName>Playground__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Playground</label>
    <type>Checkbox</type>
</CustomField>