force-app/main/default/objects/School__c/fields/Promotional_Amount__c.field-meta.xml
<CustomField>
    <fullName>Promotional_Amount__c</fullName>
    <defaultValue>100</defaultValue>
    <label>Promotional Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>