force-app/main/default/objects/School__c/fields/PT_Teacher_Strength__c.field-meta.xml
<CustomField>
    <fullName>PT_Teacher_Strength__c</fullName>
    <label>PT Teacher Strength</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>