force-app/main/default/objects/School__c/fields/School_Coordinator__c.field-meta.xml
<CustomField>
    <fullName>School_Coordinator__c</fullName>
    <label>School Coordinator</label>
    <length>255</length>
    <type>Text</type>
</CustomField>