force-app/main/default/objects/School__c/fields/Show__c.field-meta.xml
<CustomField>
    <fullName>Show__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Show</label>
    <type>Checkbox</type>
</CustomField>