force-app/main/default/objects/School__c/fields/Student_Coordinator_Ratio__c.field-meta.xml
<CustomField>
    <fullName>Student_Coordinator_Ratio__c</fullName>
    <defaultValue>15</defaultValue>
    <label>Student/Coordinator Ratio</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>