force-app/main/default/objects/School__c/fields/Student_Strength__c.field-meta.xml
<CustomField>
    <fullName>Student_Strength__c</fullName>
    <defaultValue>2000</defaultValue>
    <label>Student Strength</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>