force-app/main/default/objects/School__c/fields/Student_Teacher_s_Ratio__c.field-meta.xml
<CustomField>
    <fullName>Student_Teacher_s_Ratio__c</fullName>
    <defaultValue>20</defaultValue>
    <label>Student Teacher’s Ratio</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>