force-app/main/default/objects/School__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type of Institution</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Day School</fullName>
            </value>
            <value>
                <fullName>Pre School</fullName>
            </value>
            <value>
                <fullName>Boarding School</fullName>
            </value>
            <value>
                <fullName>Residential School</fullName>
            </value>
            <value>
                <fullName>Day cum Residential</fullName>
            </value>
            <value>
                <fullName>PU College</fullName>
            </value>
            <value>
                <fullName>Online School</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>