force-app/main/default/objects/School__c/validationRules/Fill_mandate_fields_before_moving_ahead.validationRule-meta.xml
<ValidationRule>
    <fullName>Fill_mandate_fields_before_moving_ahead</fullName>
    <active>true</active>
    <errorConditionFormula>AND( 
    OR( ISNULL(City__c), ISNULL( Principal_Email__c)
    ,  ISPICKVAL(Grade_Range__c, &apos;&apos;)
    ),
    ISCHANGED(Status__c), ISPICKVAL(Status__c, &apos;Registration Completed&apos;)
)</errorConditionFormula>
    <errorMessage>Please fill City, Principal Email, Grade Range, Playground in-order to proceed.</errorMessage>
</ValidationRule>