force-app/main/default/objects/School__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>Student_Strength__c</columns>
    <columns>Faculty_Strength__c</columns>
    <columns>Student_Teacher_s_Ratio__c</columns>
    <columns>Student_Coordinator_Ratio__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Student_Coordinator_Ratio__c</field>
        <operation>greaterThan</operation>
        <value>0</value>
    </filters>
    <label>All</label>
</ListView>